--- a/index.html
+++ b/index.html
@@ -1,85 +1,126 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
-    <header>
-        <nav class="navbar bg-body-tertiary">
-            <div class="container-fluid">
-              <a class="navbar-brand">Menu Hamburguesas</a>
-              <form class="d-flex" role="search">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success" type="submit">Search</button>
-              </form>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Bootstrap demo</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+    integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+    integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+    crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="css/bootstrap.css">
+</head>
+
+<body>
+  <header>
+    <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
+      <H1 style="color: ghostwhite;">Menu Hambruguesa</H1>
+    </nav>
+  </header>
+  <main>
+    <div class="row g-0 text-center" style="margin-top: 50px; margin-bottom: 50px;">
+      <div class="col-1"></div>
+      <div class="col-10">
+        <div class="row row-cols-1 row-cols-md-3 g-4">
+          <div class="col">
+            <div class="card h-100">
+              <img src="img/simple.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Hamburguesa Simple</h5>
+                <p class="card-text">Hamburguesa Simple 10$</p>
+              </div>
+              <div class="card-footer">
+                <small class="text-body-secondary">
+                  <button type="button" class="btn btn-danger" onclick="precio_tabla(1)">Comprar</button>
+                </small>
+              </div>
             </div>
-          </nav>
-    </header>
-    <main>
-        <div class="row g-0 text-center" style="margin-top: 50px; margin-bottom: 50px;">
-            <div class="col-1"></div>
-            <div class="col-10">
-                <div class="row row-cols-1 row-cols-md-3 g-4">
-                    <div class="col">
-                      <div class="card h-100">
-                        <img src="img/simple.png" class="card-img-top" alt="...">
-                        <div class="card-body">
-                          <h5 class="card-title">Hamburguesa Simple</h5>
-                          <p class="card-text">Hamburguesa Simple</p>
-                        </div>
-                        <div class="card-footer">
-                          <small class="text-body-secondary">
-                            <button type="button" class="btn">Comprar</button>
-                          </small>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="col">
-                      <div class="card h-100">
-                        <img src="img/doble.png" class="card-img-top" alt="...">
-                        <div class="card-body">
-                          <h5 class="card-title">Hamburguesa Doble</h5>
-                          <p class="card-text">Hamburguesa doble</p>
-                        </div>
-                        <div class="card-footer">
-                          <small class="text-body-secondary">
-                            <button type="button" class="btn">Comprar</button>
-                          </small>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="col">
-                      <div class="card h-100">
-                        <img src="img/triple.webp" class="card-img-top" alt="...">
-                        <div class="card-body">
-                          <h5 class="card-title">Hamburguesa Triple</h5>
-                          <p class="card-text">Hamburguesa Triple</p>
-                        </div>
-                        <div class="card-footer">
-                          <small class="text-body-secondary">
-                            <button type="button" class="btn">Comprar</button>
-                          </small>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-            </div>
-            <div class="col-1"></div>
           </div>
-    </main>
-    <footer>
-        <div style="display: flex; justify-content: center;">
-            <div>
-                hola
+          <div class="col">
+            <div class="card h-100">
+              <img src="img/doble.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Hamburguesa Doble</h5>
+                <p class="card-text">Hamburguesa doble 15$</p>
+              </div>
+              <div class="card-footer">
+                <small class="text-body-secondary">
+                  <button type="button" class="btn btn-danger" onclick="precio_tabla(2)">Comprar</button>
+                </small>
+              </div>
             </div>
+          </div>
+          <div class="col">
+            <div class="card h-100">
+              <img src="img/triple.webp" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Hamburguesa Triple</h5>
+                <p class="card-text">Hamburguesa Triple 30$</p>
+              </div>
+              <div class="card-footer">
+                <small class="text-body-secondary">
+                  <button type="button" class="btn btn-danger" onclick="precio_tabla(3)">Comprar</button>
+                </small>
+              </div>
+            </div>
+          </div>
         </div>
-    </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-  </body>
+      </div>
+      <div class="col-1"></div>
+    </div>
+    <section>
+      <div class="row g-0 text-center">
+        <div class="col-1"></div>
+        <div class="col-10">
+          <table class="table">
+            <thead>
+              <tr>
+                <th scope="col">Hamburguesa</th>
+                <th scope="col">Precio</th>
+              </tr>
+            </thead>
+            <tbody class="table-group-divider" id="t_body">
+            </tbody>
+          </table>
+        </div>
+        <div class="col-1"></div>
+      </div>
+    </section>
+    <section class="row g-0 text-center" style="margin-bottom: 20px;">
+      <div class="col-2"></div>
+      <div class="col-8">
+        <div class="card text-center">
+          <div class="card-header">
+            Pagar
+          </div>
+          <div class="card-body">
+            <h5 class="card-title">Pagar comprar</h5>
+            <p class="card-text"></p>
+            <a href="#" class="btn btn-primary" id="boton_precio">pago</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-2"></div>
+    </section>
+  </main>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
+</body>
+<link rel="stylesheet" href="css/style.css">
+<script src="cuenta.js"></script>
 </html>
+
+<!--Funcion 
+
+  pararme en lugar
+  Definir objeto
+  Dar valores
+  Agregar
+
+-->
