--- a/index.html
+++ b/index.html
@@ -13,66 +13,68 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
     integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
     crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="css/bootstrap.css">
+  <link rel="stylesheet" href="css/bootstrap.css"> <!-- boswatch -->
 </head>
 
 <body>
   <header>
     <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
-      <H1 style="color: ghostwhite;">Menu Hambruguesa</H1>
+      <H1 style="color: ghostwhite;">󰚅  Menu Hamburguesa  󰚅</H1>
     </nav>
   </header>
   <main>
-    <div class="row g-0 text-center" style="margin-top: 50px; margin-bottom: 50px;">
-      <div class="col-1"></div>
-      <div class="col-10">
-        <div class="row row-cols-1 row-cols-md-3 g-4">
-          <div class="col">
-            <div class="card h-100">
-              <img src="img/simple.png" class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Hamburguesa Simple</h5>
-                <p class="card-text">Hamburguesa Simple 10$</p>
-              </div>
-              <div class="card-footer">
-                <small class="text-body-secondary">
-                  <button type="button" class="btn btn-danger" onclick="precio_tabla(1)">Comprar</button>
-                </small>
-              </div>
-            </div>
-          </div>
-          <div class="col">
-            <div class="card h-100">
-              <img src="img/doble.png" class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Hamburguesa Doble</h5>
-                <p class="card-text">Hamburguesa doble 15$</p>
-              </div>
-              <div class="card-footer">
-                <small class="text-body-secondary">
-                  <button type="button" class="btn btn-danger" onclick="precio_tabla(2)">Comprar</button>
-                </small>
+    <section>
+      <div class="row g-0 text-center" style="margin-top: 50px; margin-bottom: 50px;">
+        <div class="col-1"></div>
+        <div class="col-10">
+          <div class="row row-cols-1 row-cols-md-3 g-4">
+            <div class="col">
+              <div class="card h-100">
+                <img src="img/simple.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Hamburguesa Simple</h5>
+                  <p class="card-text">Hamburguesa Simple 10$</p>
+                </div>
+                <div class="card-footer">
+                  <small class="text-body-secondary">
+                    <button type="button" class="btn btn-danger" onclick="precio_tabla(1)"></button>
+                  </small>
+                </div>
               </div>
             </div>
-          </div>
-          <div class="col">
-            <div class="card h-100">
-              <img src="img/triple.webp" class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Hamburguesa Triple</h5>
-                <p class="card-text">Hamburguesa Triple 30$</p>
+            <div class="col">
+              <div class="card h-100">
+                <img src="img/doble.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Hamburguesa Doble</h5>
+                  <p class="card-text">Hamburguesa doble 15$</p>
+                </div>
+                <div class="card-footer">
+                  <small class="text-body-secondary">
+                    <button type="button" class="btn btn-danger" onclick="precio_tabla(2)"></button>
+                  </small>
+                </div>
               </div>
-              <div class="card-footer">
-                <small class="text-body-secondary">
-                  <button type="button" class="btn btn-danger" onclick="precio_tabla(3)">Comprar</button>
-                </small>
+            </div>
+            <div class="col">
+              <div class="card h-100">
+                <img src="img/triple.webp" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Hamburguesa Triple</h5>
+                  <p class="card-text">Hamburguesa Triple 30$</p>
+                </div>
+                <div class="card-footer">
+                  <small class="text-body-secondary">
+                    <button type="button" class="btn btn-danger" onclick="precio_tabla(3)"></button>
+                  </small>
+                </div>
               </div>
             </div>
           </div>
         </div>
+        <div class="col-1"></div>
       </div>
-      <div class="col-1"></div>
-    </div>
+    </section>
     <section>
       <div class="row g-0 text-center">
         <div class="col-1"></div>
@@ -100,19 +102,23 @@
           </div>
           <div class="card-body">
             <h5 class="card-title">Pagar comprar</h5>
-            <p class="card-text"></p>
-            <a href="#" class="btn btn-primary" id="boton_precio">pago</a>
+            <p class="card-text"></p> 
+            <div style="display: flex; justify-content: center;">
+            </div>
+            <a href="#" class="btn btn-outline-success" id="boton_precio">Pago</a>
+            <a href="#" class="btn btn-outline-primary" onclick="confirmar()">Cancelar</a>
           </div>
         </div>
       </div>
       <div class="col-2"></div>
     </section>
   </main>
+  <footer> <!--no hay footer--> </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
-</body>
-<link rel="stylesheet" href="css/style.css">
+</body> 
+<link rel="stylesheet" href="css/style.css"> <!-- Mis archivos-->
 <script src="cuenta.js"></script>
 </html>
 
