--- a/index.html
+++ b/index.html
@@ -13,23 +13,23 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
     integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
     crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="css/bootstrap.css"> <!-- boswatch -->
+  <link rel="stylesheet" href="css/dark.css"> <!-- boswatch -->
 </head>
 
 <body>
   <header>
     <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
-      <H1 style="color: ghostwhite;">󰚅  Menu Hamburguesa  󰚅</H1>
+      <H1 style="color: ghostwhite;">󰚅 Menu Hamburguesa 󰚅</H1>
     </nav>
   </header>
   <main>
-    <section>
+    <section class="card-imagenes">
       <div class="row g-0 text-center" style="margin-top: 50px; margin-bottom: 50px;">
         <div class="col-1"></div>
         <div class="col-10">
           <div class="row row-cols-1 row-cols-md-3 g-4">
             <div class="col">
-              <div class="card h-100">
+              <div class="card h-100 card-img">
                 <img src="img/simple.png" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Hamburguesa Simple</h5>
@@ -43,7 +43,7 @@
               </div>
             </div>
             <div class="col">
-              <div class="card h-100">
+              <div class="card h-100 card-img">
                 <img src="img/doble.png" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Hamburguesa Doble</h5>
@@ -57,7 +57,7 @@
               </div>
             </div>
             <div class="col">
-              <div class="card h-100">
+              <div class="card h-100 card-img">
                 <img src="img/triple.webp" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Hamburguesa Triple</h5>
@@ -75,7 +75,7 @@
         <div class="col-1"></div>
       </div>
     </section>
-    <section>
+    <section style="margin-bottom: 15px;">
       <div class="row g-0 text-center">
         <div class="col-1"></div>
         <div class="col-10">
@@ -95,31 +95,65 @@
     </section>
     <section class="row g-0 text-center" style="margin-bottom: 20px;">
       <div class="col-2"></div>
-      <div class="col-8">
+      <div class="col-8 sombra">
         <div class="card text-center">
           <div class="card-header">
             Pagar
           </div>
           <div class="card-body">
             <h5 class="card-title">Pagar comprar</h5>
-            <p class="card-text"></p> 
+            <p class="card-text"></p>
             <div style="display: flex; justify-content: center;">
             </div>
-            <a href="#" class="btn btn-outline-success" id="boton_precio">Pago</a>
-            <a href="#" class="btn btn-outline-primary" onclick="confirmar()">Cancelar</a>
+            <a href="#" class="btn btn-outline-success" id="boton_precio" onclick="confirmar(true)">Pagar</a>
+            <button type="button" class="btn btn-outline-warning" data-bs-toggle="modal" data-bs-target="#exampleModal">
+              Cancelar
+            </button>
+            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+              aria-hidden="true">
+              <div class="modal-dialog">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="exampleModalLabel">¿Desea cancelar?</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+                    <button type="button" class="btn btn-primary" onclick="confirmar(true)">Aceptar</button>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
       <div class="col-2"></div>
     </section>
   </main>
-  <footer> <!--no hay footer--> </footer>
+  <footer style="margin-top: 30px; margin-bottom: 10px;" class="row g-0">
+    <div class="col-1"></div>
+    <div class="col-10">
+      <div class="card" style=" border-radius: 15px;">
+        <div class="card-body">
+          <h5 class="card-title">Footer</h5>
+          <p class="card-text">yo que se</p>
+          <div style="display: flex; justify-content: center;" class="footer-div">
+            <div class="footer-text"><a href="https://twitter.com/home" class="btn btn-primary"></a></div>
+            <div class="footer-text"><a href="https://www.facebook.com/" class="btn btn-primary"></a></div>
+            <div class="footer-text"><a href="https://web.whatsapp.com/" class="btn btn-primary"></a></div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-1"></div>
+  </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
-</body> 
+</body>
 <link rel="stylesheet" href="css/style.css"> <!-- Mis archivos-->
 <script src="cuenta.js"></script>
+
 </html>
 
 <!--Funcion 
