--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         <div class="card-body">
           <h5 class="card-title">Pagar compra</h5>  
           <p class="card-text"></p>
-          <a href="#" class="btn btn-outline-success" id="boton_precio" onclick="confirmar(true)">Pagar</a>
+          <a href="#" class="btn btn-outline-success" id="boton_precio" onclick="confirmar()">Pagar</a>
           <button type="button" class="btn btn-outline-warning" data-bs-toggle="modal" data-bs-target="#exampleModal">
             Cancelar
           </button>
